# presenced

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ghcr.yml
contrib/: presenced.service
contrib/os_presence/: os_presence.service
contrib/presence_http/: docker-compose.yml
contrib/presenced/: presenced.env.example
src/: lib.rs  main.rs  wellknown.rs
templates/: index.html
