[package]
name = "presenced"
version = "0.1.0"
edition = "2021"
description = "An naive local implemention of Discord presence server"

[dependencies]
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
