[package]
name = "presenced"
version = "0.1.0"
edition = "2021"
description = "A naive local implemention of Discord presence server"

[dependencies]
chrono = "0.4.39"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
phf = { version = "0.11", features = ["macros"] }
