[package]
name = "presenced"
version = "0.1.0"
edition = "2021"
description = "A naive local implemention of Discord presence server"
default-run = "presenced"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
phf = { version = "0.11", features = ["macros"] }
axum = "0.8.1"
askama = "0.12.1"
axum-macros = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
sd-notify = "0.4.5"
nix = { version = "0.29.0", features = ["feature"] }
